// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert display a success message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Success
  </div>
</DocumentFragment>
`;

exports[`Alert display an error message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error
  </div>
</DocumentFragment>
`;

exports[`Alert does not render an error or a success message if message props is empty 1`] = `<DocumentFragment />`;
